[project]
name = "merge-geotiff"
version = "1.1.0"
description = "Merge multiple GeoTIFFs"
authors = [
    { name = "Rumia_Chnnel", email = "github@rumia-ch.uk" }
]
dependencies = [
    "pillow>=12.3.0",
    "delphifmx>=1.1.0",
    "numpy>=2.5.1",
    "matplotlib>=3.11.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "pyproj>=3.7.2",
    "GDAL @ https://github.com/cgohlke/geospatial-wheels/releases/download/v2026.2.26/gdal-3.12.2-cp312-cp312-win_amd64.whl#sha256=c65f4905007e63f86d82526fbae43441207daf2ff3ba19fdb7048bc9f8726581",
    "tqdm>=4.68.4",
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[project.scripts]
merge-geotiff = "merge_geotiff.cli:cli"
merge-geotiff-gui = "merge_geotiff.gui:main_func"
update-gdal-wheel = "merge_geotiff.gdal_wheels:main"

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "pip-licenses>=5.5.5",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/merge_geotiff"]
